--- a/network_analysis_up_markdown.Rmd
+++ b/network_analysis_up_markdown.Rmd
@@ -68,7 +68,8 @@ ego_df %<>% arrange(ego_id)
 # sum(ego_ego_met$ego_id == ego_df$ego_id)
   
 # add district, block, age, education, caste, parity, husband migrant columns to ego_ego_met
-ego_ego_met %<>% add_column(district = ego_df$district_name,
+ego_ego_met %<>% add_column(geography = ego_df$geography,
+                            district = ego_df$district_name,
                             block = ego_df$block_name,
                             age = ego_df$ego_age,
                             edu = ego_df$ego_edu,
@@ -207,6 +208,16 @@ ego_ego_met %>%
             mutate(n = ego_ego_met %>% group_by(district) %>% tally() %>% .$n) %>%
   kbl(caption = 'Ego Mean Degree, Betweenness and Closeness Centrality by District') %>%
   kable_classic_2('hover', full_width = F, position = 'left')
+
+# # write ego table by geography
+# ego_ego_met %>% 
+#             group_by(geography) %>% 
+#             summarize(degree = mean(deg, na.rm = T) %>% round(2),
+#                       betweenness = mean(bet, na.rm = T) %>% round(2),
+#                       closeness = mean(clo, na.rm = T) %>% round(2)) %>%
+#             mutate(n = ego_ego_met %>% group_by(district) %>% tally() %>% .$n) %>%
+#   kbl(caption = 'Ego Mean Degree, Betweenness and Closeness Centrality by Geography') %>%
+#   kable_classic_2('hover', full_width = F, position = 'left')
 ```
 ## B) Alters in Ego's Network
 
@@ -254,7 +265,8 @@ ego_df %<>% arrange(ego_id)
 # sum(ego_alt_met$ego_id == ego_df$ego_id)
 
 # add district and block columns to ego_alt_met
-ego_alt_met %<>% add_column(district = ego_df$district_name,
+ego_alt_met %<>% add_column(geography = ego_df$geography,
+                            district = ego_df$district_name,
                             block = ego_df$block_name)
 
 # write ego_alt table by block
@@ -278,6 +290,17 @@ ego_alt_met %>%
             mutate(n = ego_alt_met %>% group_by(district) %>% tally() %>% .$n) %>%
   kbl(caption = 'Alter Mean Degree, Betweenness, Closeness Centrality, and Density by District') %>%
   kable_classic_2('hover', full_width = F, position = 'left')
+
+# # write ego_alt table by geography
+# ego_alt_met %>% 
+#             group_by(geography) %>% 
+#             summarize(mean_degree = mean(mean_deg, na.rm = T) %>% round(2),
+#                       mean_betweenness = mean(mean_bet, na.rm = T) %>% round(2),
+#                       mean_closeness = mean(mean_clo, na.rm = T) %>% round(2),
+#                       mean_density = mean(dens, na.rm = T) %>% round(2)) %>%
+#             mutate(n = ego_alt_met %>% group_by(district) %>% tally() %>% .$n) %>%
+#   kbl(caption = 'Alter Mean Degree, Betweenness, Closeness Centrality, and Density by Geography') %>%
+#   kable_classic_2('hover', full_width = F, position = 'left')
 
 ```
 
@@ -329,7 +352,8 @@ alter_df %<>% arrange(alter_id)
 # sum(alt_alt_met$alter_id == alter_df$alter_id)
 
 # add district, block, age, education, caste columns to alt_alt_met
-alt_alt_met %<>% add_column(district = alter_df$district_name,
+alt_alt_met %<>% add_column(geography = alter_df$geography,
+                            district = alter_df$district_name,
                             block = alter_df$block_name,
                             age = alter_df$age,
                             edu = alter_df$education,
@@ -353,6 +377,16 @@ alt_alt_met %>%
                       closeness = mean(clo, na.rm = T) %>% round(2)) %>%
             mutate(n = alt_alt_met %>% group_by(district) %>% tally() %>% .$n) %>%
   kbl(caption = 'Alter Mean Degree, Betweenness and Closeness Centrality by District') %>%
+  kable_classic_2('hover', full_width = F, position = 'left')
+
+# write alt_alt table by geography
+alt_alt_met %>% 
+            group_by(geography) %>% 
+            summarize(degree = mean(deg, na.rm = T) %>% round(2),
+                      betweenness = mean(bet, na.rm = T) %>% round(2),
+                      closeness = mean(clo, na.rm = T) %>% round(2)) %>%
+            mutate(n = alt_alt_met %>% group_by(geography) %>% tally() %>% .$n) %>%
+  kbl(caption = 'Alter Mean Degree, Betweenness and Closeness Centrality by Geography') %>%
   kable_classic_2('hover', full_width = F, position = 'left')
 ```
 
@@ -402,7 +436,8 @@ alter_df %<>% arrange(alter_id)
 # sum(alt_aalt_met$alter_id == alter_df$alter_id)
 
 # add district and block columns to alt_aalt_met
-alt_aalt_met %<>% add_column(district = alter_df$district_name,
+alt_aalt_met %<>% add_column(geography = alter_df$geography,
+                             district = alter_df$district_name,
                             block = alter_df$block_name)
 
 # write alt_aalt table by block
@@ -425,6 +460,17 @@ alt_aalt_met %>%
                       mean_density = mean(dens, na.rm = T) %>% round(2)) %>%
             mutate(n = alt_aalt_met %>% group_by(district) %>% tally() %>% .$n) %>%
   kbl(caption = 'AAlter Mean Degree, Betweenness, Closeness Centrality, and Density by District') %>%
+  kable_classic_2('hover', full_width = F, position = 'left')
+
+# write alt_aalt table by geography
+alt_aalt_met %>% 
+            group_by(geography) %>% 
+            summarize(mean_degree = mean(mean_deg, na.rm = T) %>% round(2),
+                      mean_betweenness = mean(mean_bet, na.rm = T) %>% round(2),
+                      mean_closeness = mean(mean_clo, na.rm = T) %>% round(2),
+                      mean_density = mean(dens, na.rm = T) %>% round(2)) %>%
+            mutate(n = alt_aalt_met %>% group_by(geography) %>% tally() %>% .$n) %>%
+  kbl(caption = 'AAlter Mean Degree, Betweenness, Closeness Centrality, and Density by Geography') %>%
   kable_classic_2('hover', full_width = F, position = 'left')
 
 ```
@@ -926,56 +972,45 @@ ggplot(deg_alt_edu, aes(x = deg %>% as.factor,
 
 ```
 
-``````{r, echo = F, warning = F, message = F, results = 'asis', fig.width = 13,fig.height = 8}
+```{r, echo = F, warning = F, message = F, results = 'asis', fig.width = 13,fig.height = 8}
 ##################################
 ### PLOTS OF NETWORK STRUCTURE ###
 ##################################
-
 # density of 1st net
 # ego_alt_met$dens[1]
-
 # basic plot
 ggraph(gr_list_ego[[1]], 'dh') +
   geom_edge_link(aes(linetype = as.factor(weight))) +
   geom_node_label(aes(label = name)) + 
-  theme_graph(base_family = 'Helvetica') +
+#  theme_graph(base_family = 'Helvetica') +
   scale_edge_linetype_manual(values = c('dotted', 'solid')) + 
   theme(legend.position="none") +
   ggtitle('Ego-Alter Network (Density = 0.7)')
-
 # ggsave(filename = 'results_up/figures/ego_net_1.png')
-
 # density of 1st net
 # ego_alt_met$dens[109]
-
 # basic plot2
 ggraph(gr_list_ego[[109]], 'dh') +
   geom_edge_link(aes(linetype = as.factor(weight))) +
   geom_node_label(aes(label = name)) + 
-  theme_graph(base_family = 'Helvetica') +
+#  theme_graph(base_family = 'Helvetica') +
   scale_edge_linetype_manual(values = c('dotted', 'solid')) + 
   theme(legend.position="none") +
   ggtitle('Ego-Alter Network (Density = 1)')
-
 # ggsave(filename = 'results_up/figures/ego_net_109.png')
-
 # density of 1st net
 # ego_alt_met$dens[147]
-
 # basic plot2
 ggraph(gr_list_ego[[147]], 'dh') +
   geom_edge_link(aes(linetype = as.factor(weight))) +
   geom_node_label(aes(label = name)) + 
-  theme_graph(base_family = 'Helvetica') +
+#  theme_graph(base_family = 'Helvetica') +
   scale_edge_linetype_manual(values = c('dotted', 'solid')) + 
   theme(legend.position="none") +
   ggtitle('Ego-Alter Network (Density = 0.67)')
-
 # ggsave(filename = 'results_up/figures/ego_net_147.png')
-
 # clear workspace
 rm(list=ls())
-
 ```
 
 ```{r, echo = F, warning = F, message = F, results = 'asis'}
