--- a/network_analysis_bihar_markdown.Rmd
+++ b/network_analysis_bihar_markdown.Rmd
@@ -2102,6 +2102,10 @@ blau <- function(perc){
   return(c(b, iqv, k))
 }
 
+if('valid_percent' %in% colnames(sex)){
+  sex %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- sex$n[is.na(sex$percent) == F] %>% sum
 
 # calculate heterogeneity
@@ -2128,10 +2132,15 @@ hetero <- tibble(metric = 'Gender',
 
 # build proportions
 caste <- ea %>% tabyl(alt_caste)
-n <- caste$n[is.na(caste$valid_percent) == F] %>% sum
+
+if('valid_percent' %in% colnames(caste)){
+  caste %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- caste$n[is.na(caste$percent) == F] %>% sum
 
 # calculate heterogeneity
-caste <- blau(na.omit(caste$valid_percent))
+caste <- blau(na.omit(caste$percent))
 
 # create tibble
 dat = tibble(blau = caste[1],
@@ -2187,8 +2196,13 @@ hetero %<>% add_row(metric = 'Caste',
 
 # calculate heterogeneity
 using_fp <- tabyl(ea$alt_using_fp)
-n <- using_fp$n[is.na(using_fp$valid_percent) == F] %>% sum
-using_fp <- blau(na.omit(using_fp$valid_percent))
+
+if('valid_percent' %in% colnames(using_fp)){
+  using_fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- using_fp$n[is.na(using_fp$percent) == F] %>% sum
+using_fp <- blau(na.omit(using_fp$percent))
 dat <- tibble(blau = using_fp[1],
                    iqv = using_fp[2],
                    k = using_fp[3])
@@ -2214,8 +2228,13 @@ hetero %<>% add_row(metric = 'Currently Using Family Planning',
 
 # calculate heterogeneity
 ppl <- tabyl(ea$alt_know_asha)
-n <- ppl$n[is.na(ppl$valid_percent) == F] %>% sum
-ppl <- blau(na.omit(ppl$valid_percent))
+
+if('valid_percent' %in% colnames(ppl)){
+  ppl %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- ppl$n[is.na(ppl$percent) == F] %>% sum
+ppl <- blau(na.omit(ppl$percent))
 dat <- tibble(blau = ppl[1],
               iqv = ppl[2],
               k = ppl[3])
@@ -2230,8 +2249,13 @@ hetero %<>% add_row(metric = 'Know ASHA',
 # anm
 # calculate heterogeneity
 ppl <- tabyl(ea$alt_know_anm)
-n <- ppl$n[is.na(ppl$valid_percent) == F] %>% sum
-ppl <- blau(na.omit(ppl$valid_percent))
+
+if('valid_percent' %in% colnames(ppl)){
+  ppl %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- ppl$n[is.na(ppl$percent) == F] %>% sum
+ppl <- blau(na.omit(ppl$percent))
 dat <- tibble(blau = ppl[1],
               iqv = ppl[2],
               k = ppl[3])
@@ -2246,8 +2270,13 @@ hetero %<>% add_row(metric = 'Know ANM',
 # aww
 # calculate heterogeneity
 ppl <- tabyl(ea$alt_know_aww)
-n <- ppl$n[is.na(ppl$valid_percent) == F] %>% sum
-ppl <- blau(na.omit(ppl$valid_percent))
+
+if('valid_percent' %in% colnames(ppl)){
+  ppl %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- ppl$n[is.na(ppl$percent) == F] %>% sum
+ppl <- blau(na.omit(ppl$percent))
 dat <- tibble(blau = ppl[1],
               iqv = ppl[2],
               k = ppl[3])
@@ -2262,8 +2291,13 @@ hetero %<>% add_row(metric = 'Know AWW',
 # shg
 # calculate heterogeneity
 ppl <- tabyl(ea$alt_know_shg)
-n <- ppl$n[is.na(ppl$valid_percent) == F] %>% sum
-ppl <- blau(na.omit(ppl$valid_percent))
+
+if('valid_percent' %in% colnames(ppl)){
+  ppl %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- ppl$n[is.na(ppl$percent) == F] %>% sum
+ppl <- blau(na.omit(ppl$percent))
 dat <- tibble(blau = ppl[1],
               iqv = ppl[2],
               k = ppl[3])
@@ -2278,8 +2312,13 @@ hetero %<>% add_row(metric = 'Know SHG',
 # pradhan
 # calculate heterogeneity
 ppl <- tabyl(ea$alt_know_pra)
-n <- ppl$n[is.na(ppl$valid_percent) == F] %>% sum
-ppl <- blau(na.omit(ppl$valid_percent))
+
+if('valid_percent' %in% colnames(ppl)){
+  ppl %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- ppl$n[is.na(ppl$percent) == F] %>% sum
+ppl <- blau(na.omit(ppl$percent))
 dat <- tibble(blau = ppl[1],
               iqv = ppl[2],
               k = ppl[3])
@@ -2294,8 +2333,13 @@ hetero %<>% add_row(metric = 'Know Pradhan',
 # pharmacist
 # calculate heterogeneity
 ppl <- tabyl(ea$alt_know_pha)
-n <- ppl$n[is.na(ppl$valid_percent) == F] %>% sum
-ppl <- blau(na.omit(ppl$valid_percent))
+
+if('valid_percent' %in% colnames(ppl)){
+  ppl %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- ppl$n[is.na(ppl$percent) == F] %>% sum
+ppl <- blau(na.omit(ppl$percent))
 dat <- tibble(blau = ppl[1],
               iqv = ppl[2],
               k = ppl[3])
@@ -2310,8 +2354,13 @@ hetero %<>% add_row(metric = 'Know Pharmacist',
 # doctor
 # calculate heterogeneity
 ppl <- tabyl(ea$alt_know_doc)
-n <- ppl$n[is.na(ppl$valid_percent) == F] %>% sum
-ppl <- blau(na.omit(ppl$valid_percent))
+
+if('valid_percent' %in% colnames(ppl)){
+  ppl %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- ppl$n[is.na(ppl$percent) == F] %>% sum
+ppl <- blau(na.omit(ppl$percent))
 dat <- tibble(blau = ppl[1],
               iqv = ppl[2],
               k = ppl[3])
@@ -2326,8 +2375,13 @@ hetero %<>% add_row(metric = 'Know Doctor',
 # religious leader
 # calculate heterogeneity
 ppl <- tabyl(ea$alt_know_rel)
-n <- ppl$n[is.na(ppl$valid_percent) == F] %>% sum
-ppl <- blau(na.omit(ppl$valid_percent))
+
+if('valid_percent' %in% colnames(ppl)){
+  ppl %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- ppl$n[is.na(ppl$percent) == F] %>% sum
+ppl <- blau(na.omit(ppl$percent))
 dat <- tibble(blau = ppl[1],
               iqv = ppl[2],
               k = ppl[3])
@@ -2345,6 +2399,11 @@ hetero %<>% add_row(metric = 'Know Religious Leader',
 # calculate homophily
 # calculate heterogeneity
 ppl <- tabyl(alt_hw)
+
+if('valid_percent' %in% colnames(ppl)){
+  ppl %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- ppl$n[is.na(ppl$percent) == F] %>% sum
 ppl <- blau(na.omit(ppl$percent))
 dat <- tibble(blau = ppl[1],
@@ -2361,6 +2420,11 @@ hetero %<>% add_row(metric = 'Know Health Worker Category',
 # calculate village leader category
 # calculate heterogeneity
 ppl <- tabyl(alt_vl)
+
+if('valid_percent' %in% colnames(ppl)){
+  ppl %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- ppl$n[is.na(ppl$percent) == F] %>% sum
 ppl <- blau(na.omit(ppl$percent))
 dat <- tibble(blau = ppl[1],
@@ -2404,6 +2468,11 @@ hetero %<>% add_row(metric = 'Know Village Leader Category',
 
 # calculate heterogeneity
 res <- tabyl(ea$alt_residence)
+
+if('valid_percent' %in% colnames(res)){
+  res %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- res$n[is.na(res$percent) == F] %>% sum
 res <- blau(na.omit(res$percent))
 dat <- tibble(blau = res[1],
@@ -2426,6 +2495,11 @@ hetero %<>% add_row(metric = 'Residence',
 
 # calculate homophily
 a <- tabyl(str_detect(ea$alt_learned, "A"))
+
+if('valid_percent' %in% colnames(a)){
+  a %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- a$n[is.na(a$percent) == F] %>% sum
 a <- blau(a$percent)
 dat <- tibble(blau = a[1],
@@ -2440,6 +2514,11 @@ hetero %<>% add_row(metric = 'Social Learning: Get along with family',
                n = n %>% as.character)
 
 b <- tabyl(str_detect(ea$alt_learned, "B"))
+
+if('valid_percent' %in% colnames(b)){
+  b %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- b$n[is.na(b$percent) == F] %>% sum
 b <- blau(b$percent)
 dat <- tibble(blau = b[1],
@@ -2454,6 +2533,11 @@ hetero %<>% add_row(metric = 'Social Learning: Ways of earning',
                n = n %>% as.character)
 
 c <- tabyl(str_detect(ea$alt_learned, "C"))
+
+if('valid_percent' %in% colnames(c)){
+  c %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- c$n[is.na(c$percent) == F] %>% sum
 c <- blau(c$percent)
 dat <- tibble(blau = c[1],
@@ -2468,6 +2552,11 @@ hetero %<>% add_row(metric = 'Social Learning: Take care of children',
                n = n %>% as.character)
 
 d <- tabyl(str_detect(ea$alt_learned, "D"))
+
+if('valid_percent' %in% colnames(d)){
+  d %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- d$n[is.na(d$percent) == F] %>% sum
 d <- blau(d$percent)
 dat <- tibble(blau = d[1],
@@ -2482,6 +2571,11 @@ hetero %<>% add_row(metric = 'Social Learning: Get health care',
                n = n %>% as.character)
 
 e <- tabyl(str_detect(ea$alt_learned, "E"))
+
+if('valid_percent' %in% colnames(e)){
+  e %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- e$n[is.na(e$percent) == F] %>% sum
 e <- blau(e$percent)
 dat <- tibble(blau = e[1],
@@ -2496,6 +2590,11 @@ hetero %<>% add_row(metric = 'Social Learning: Apply for government schemes',
                n = n %>% as.character)
 
 f <- tabyl(str_detect(ea$alt_learned, "F"))
+
+if('valid_percent' %in% colnames(f)){
+  f %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- f$n[is.na(f$percent) == F] %>% sum
 f <- blau(f$percent)
 dat <- tibble(blau = f[1],
@@ -2510,6 +2609,11 @@ hetero %<>% add_row(metric = 'Social Learning: Plan no. of children to have',
                n = n %>% as.character)
 
 g <- tabyl(str_detect(ea$alt_learned, "G"))
+
+if('valid_percent' %in% colnames(g)){
+  g %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- g$n[is.na(g$percent) == F] %>% sum
 g <- blau(g$percent)
 dat <- tibble(blau = g[1],
@@ -2532,6 +2636,11 @@ hetero %<>% add_row(metric = 'Social Learning: FP methods',
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_encourage_fp)
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- fp$n[is.na(fp$percent) == F] %>% sum
 fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
@@ -2554,6 +2663,11 @@ hetero %<>% add_row(metric = 'Encourage Use of Family Planning',
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_discuss_fp)
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- fp$n[is.na(fp$percent) == F] %>% sum
 fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
@@ -2576,6 +2690,11 @@ hetero %<>% add_row(metric = 'Discuss FP Methods Freely',
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_help_ego)
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- fp$n[is.na(fp$percent) == F] %>% sum
 fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
@@ -2598,6 +2717,11 @@ hetero %<>% add_row(metric = 'Alter Help/Advise Ego',
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_helped_by_ego)
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- fp$n[is.na(fp$percent) == F] %>% sum
 fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
@@ -2620,6 +2744,11 @@ hetero %<>% add_row(metric = 'Ego Help/Advise Alter',
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_against_advice)
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- fp$n[is.na(fp$percent) == F] %>% sum
 fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
@@ -2642,6 +2771,11 @@ hetero %<>% add_row(metric = 'Going Against Advice',
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_support_no_child)
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
 n <- fp$n[is.na(fp$percent) == F] %>% sum
 fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
@@ -3490,9 +3624,9 @@ homo_alt %<>% add_row(metric = 'Live in Same Household (%)',
 
 ```{r, echo = F, warning = F, message = F, results = 'asis'}
 
-#####################################
-### HETEROGENEITY OF EGO'S ALTERS ###
-#####################################
+###########################################
+### HETEROGENEITY OF ALTERS AND AALTERS ###
+###########################################
 
 ###########
 ### SEX ###
@@ -3513,10 +3647,14 @@ blau <- function(perc){
   return(c(b, iqv, k))
 }
 
-n <- sex$n[is.na(sex$valid_percent) == F] %>% sum
+if('valid_percent' %in% colnames(sex)){
+  sex %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- sex$n[is.na(sex$percent) == F] %>% sum
 
 # calculate heterogeneity
-sex <- blau(na.omit(sex$valid_percent))
+sex <- blau(na.omit(sex$percent))
 
 # create tibble
 dat = tibble(blau = sex[1],
@@ -3540,10 +3678,14 @@ hetero_alt <- tibble(metric = 'Gender',
 # build proportions
 caste <- ea %>% tabyl(alt_caste)
 
-n <- caste$n[is.na(caste$valid_percent) == F] %>% sum
+if('valid_percent' %in% colnames(caste)){
+  caste %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- caste$n[is.na(caste$percent) == F] %>% sum
 
 # calculate heterogeneity
-caste <- blau(na.omit(caste$valid_percent))
+caste <- blau(na.omit(caste$percent))
 
 # create tibble
 dat = tibble(blau = caste[1],
@@ -3599,8 +3741,13 @@ hetero_alt %<>% add_row(metric = 'Caste',
 
 # calculate heterogeneity
 using_fp <- tabyl(ea$alt_using_fp)
-n <- using_fp$n[is.na(using_fp$valid_percent) == F] %>% sum
-using_fp <- blau(na.omit(using_fp$valid_percent))
+
+if('valid_percent' %in% colnames(using_fp)){
+  using_fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- using_fp$n[is.na(using_fp$percent) == F] %>% sum
+using_fp <- blau(na.omit(using_fp$percent))
 dat <- tibble(blau = using_fp[1],
                    iqv = using_fp[2],
                    k = using_fp[3])
@@ -3780,8 +3927,13 @@ hetero_alt %<>% add_row(metric = 'Currently Using Family Planning',
 
 # calculate heterogeneity
 res <- tabyl(ea$alt_residence)
-n <- res$n[is.na(res$valid_percent) == F] %>% sum
-res <- blau(na.omit(res$valid_percent))
+
+if('valid_percent' %in% colnames(res)){
+  res %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- res$n[is.na(res$percent) == F] %>% sum
+res <- blau(na.omit(res$percent))
 dat <- tibble(blau = res[1],
               iqv = res[2],
               k = res[3])
@@ -3802,8 +3954,13 @@ hetero_alt %<>% add_row(metric = 'Residence',
 
 # calculate homophily
 a <- tabyl(str_detect(ea$alt_learned, "A"))
-n <- a$n[is.na(a$valid_percent) == F] %>% sum
-a <- blau(na.omit(a$valid_percent))
+
+if('valid_percent' %in% colnames(a)){
+  a %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- a$n[is.na(a$percent) == F] %>% sum
+a <- blau(na.omit(a$percent))
 dat <- tibble(blau = a[1],
               iqv = a[2],
               k = a[3])
@@ -3816,8 +3973,13 @@ hetero_alt %<>% add_row(metric = 'Social Learning: Get along with family',
                n = n %>% as.character)
 
 b <- tabyl(str_detect(ea$alt_learned, "B"))
-n <- b$n[is.na(b$valid_percent) == F] %>% sum
-b <- blau(na.omit(b$valid_percent))
+
+if('valid_percent' %in% colnames(b)){
+  b %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- b$n[is.na(b$percent) == F] %>% sum
+b <- blau(na.omit(b$percent))
 dat <- tibble(blau = b[1],
               iqv = b[2],
               k = b[3])
@@ -3830,8 +3992,13 @@ hetero_alt %<>% add_row(metric = 'Social Learning: Ways of earning',
                n = n %>% as.character)
 
 c <- tabyl(str_detect(ea$alt_learned, "C"))
-n <- c$n[is.na(c$valid_percent) == F] %>% sum
-c <- blau(na.omit(c$valid_percent))
+
+if('valid_percent' %in% colnames(c)){
+  c %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- c$n[is.na(c$percent) == F] %>% sum
+c <- blau(na.omit(c$percent))
 dat <- tibble(blau = c[1],
               iqv = c[2],
               k = c[3])
@@ -3844,8 +4011,13 @@ hetero_alt %<>% add_row(metric = 'Social Learning: Take care of children',
                n = n %>% as.character)
 
 d <- tabyl(str_detect(ea$alt_learned, "D"))
-n <- d$n[is.na(d$valid_percent) == F] %>% sum
-d <- blau(na.omit(d$valid_percent))
+
+if('valid_percent' %in% colnames(d)){
+  d %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- d$n[is.na(d$percent) == F] %>% sum
+d <- blau(na.omit(d$percent))
 dat <- tibble(blau = d[1],
               iqv = d[2],
               k = d[3])
@@ -3858,8 +4030,13 @@ hetero_alt %<>% add_row(metric = 'Social Learning: Get health care',
                n = n %>% as.character)
 
 e <- tabyl(str_detect(ea$alt_learned, "E"))
-n <- e$n[is.na(e$valid_percent) == F] %>% sum
-e <- blau(na.omit(e$valid_percent))
+
+if('valid_percent' %in% colnames(e)){
+  e %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- e$n[is.na(e$percent) == F] %>% sum
+e <- blau(na.omit(e$percent))
 dat <- tibble(blau = e[1],
               iqv = e[2],
               k = e[3])
@@ -3872,8 +4049,13 @@ hetero_alt %<>% add_row(metric = 'Social Learning: Apply for government schemes'
                n = n %>% as.character)
 
 f <- tabyl(str_detect(ea$alt_learned, "F"))
-n <- f$n[is.na(f$valid_percent) == F] %>% sum
-f <- blau(na.omit(f$valid_percent))
+
+if('valid_percent' %in% colnames(f)){
+  f %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- f$n[is.na(f$percent) == F] %>% sum
+f <- blau(na.omit(f$percent))
 dat <- tibble(blau = f[1],
               iqv = f[2],
               k = f[3])
@@ -3886,8 +4068,13 @@ hetero_alt %<>% add_row(metric = 'Social Learning: Plan no. of children to have'
                n = n %>% as.character)
 
 g <- tabyl(str_detect(ea$alt_learned, "G"))
-n <- g$n[is.na(g$valid_percent) == F] %>% sum
-g <- blau(na.omit(g$valid_percent))
+
+if('valid_percent' %in% colnames(g)){
+  g %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- g$n[is.na(g$percent) == F] %>% sum
+g <- blau(na.omit(g$percent))
 dat <- tibble(blau = g[1],
               iqv = g[2],
               k = g[3])
@@ -3908,8 +4095,13 @@ hetero_alt %<>% add_row(metric = 'Social Learning: FP methods',
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_encourage_fp)
-n <- fp$n[is.na(fp$valid_percent) == F] %>% sum
-fp <- blau(na.omit(fp$valid_percent))
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- fp$n[is.na(fp$percent) == F] %>% sum
+fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
              iqv = fp[2],
               k = fp[3])
@@ -3930,8 +4122,13 @@ hetero_alt %<>% add_row(metric = 'Encourage Use of Family Planning',
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_discuss_fp)
-n <- fp$n[is.na(fp$valid_percent) == F] %>% sum
-fp <- blau(na.omit(fp$valid_percent))
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- fp$n[is.na(fp$percent) == F] %>% sum
+fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
              iqv = fp[2],
               k = fp[3])
@@ -3952,8 +4149,13 @@ hetero_alt %<>% add_row(metric = 'Discuss FP Methods Freely',
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_help_ego)
-n <- fp$n[is.na(fp$valid_percent) == F] %>% sum
-fp <- blau(na.omit(fp$valid_percent))
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- fp$n[is.na(fp$percent) == F] %>% sum
+fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
              iqv = fp[2],
               k = fp[3])
@@ -3974,8 +4176,13 @@ hetero_alt %<>% add_row(metric = "Alter's Alter Help/Advise Alter",
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_helped_by_ego)
-n <- fp$n[is.na(fp$valid_percent) == F] %>% sum
-fp <- blau(na.omit(fp$valid_percent))
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- fp$n[is.na(fp$percent) == F] %>% sum
+fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
              iqv = fp[2],
               k = fp[3])
@@ -3996,8 +4203,13 @@ hetero_alt %<>% add_row(metric = "Alter Help/Advise Alter's Alter",
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_against_advice)
-n <- fp$n[is.na(fp$valid_percent) == F] %>% sum
-fp <- blau(na.omit(fp$valid_percent))
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- fp$n[is.na(fp$percent) == F] %>% sum
+fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
              iqv = fp[2],
               k = fp[3])
@@ -4018,8 +4230,13 @@ hetero_alt %<>% add_row(metric = 'Going Against Advise',
 
 # calculate heterogeneity
 fp <- tabyl(ea$alt_support_no_child)
-n <- fp$n[is.na(fp$valid_percent) == F] %>% sum
-fp <- blau(na.omit(fp$valid_percent))
+
+if('valid_percent' %in% colnames(fp)){
+  fp %<>% select(-percent) %>% rename(percent = valid_percent)
+}
+
+n <- fp$n[is.na(fp$percent) == F] %>% sum
+fp <- blau(na.omit(fp$percent))
 dat <- tibble(blau = fp[1],
              iqv = fp[2],
               k = fp[3])
